--- a/angular.json
+++ b/angular.json
@@ -32,9 +32,11 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+            "@angular/material/prebuilt-themes/cyan-orange.css",
+            "src/styles.scss",
+             "node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": []
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.js"]
           },
           "configurations": {
             "production": {
